# jim-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHEATSHEET.md  Dockerfile  README.md  dev.sh  docker-compose.yml  pyproject.toml
.claude/: evals.sh  gate.sh  launch.json
.claude/handoffs/: 2026-07-07-1853-onboarding-and-hermeticity.md
docs/: AGENT_INTEROP.md  ARCHITECTURE.md  BUILD_PLAN.md  DEPLOY.md  ENTERPRISE_VISION.md  EVAL_LADDER.md  LAUNCH.md  NORTH_STAR.md  ROADMAP.md  SHOWCASE.md  SYSTEM_MAP.md
docs/adr/: 0001-deterministic-materiality-gate.md  0002-lightweight-asyncio-scheduler.md  0003-bazaar-discovery.md  0004-mainnet-cutover-and-ui-self-pay.md  0005-settlement-audit-and-browser-wallet.md  0006-research-quality-memo-cache-completeness-judge-rubric.md  0007-data-source-economics-multichain-macro.md  0008-agent-economy-trust-callchain-billing.md  0009-eval-harness-persisted-runs-tiered-suites.md  0010-a2a-durable-paid-tasks.md  0010-dual-mode-claude-auth-subscription-devloop.md
scripts/: discover_demo.py  graph_probe.py  peer_demo.py  ping_demo.py  precompute.py  research_demo.py
src/jim/: __init__.py  admin.py  config.py  dashboard.py  llm.py
src/jim/a2a/: __init__.py  app.py  artifacts.py  card.py  crypto.py  executor.py  extension.py  inputs.py  payments.py  stores.py
src/jim/buyer/: __init__.py  client.py
src/jim/eval/: __init__.py  calibrate.py  cli.py  compare.py  dataset.py  dataset_guards.py  dataset_judge.py  metrics.py  rubric.py  runner.py  scenarios.py  storage.py  ui.py
src/jim/interop/: __init__.py  attest.py  callchain.py  cli.py  trust.py
src/jim/marketplace/: catalog.py  (+11 more)
tests/: conftest.py  test_a2a_card.py  test_a2a_inputs.py  test_a2a_mount.py  test_a2a_payments.py  test_a2a_research_flow.py  test_a2a_stores.py  test_a2a_streaming.py  test_a2a_transport.py  test_admin.py  test_agentcard.py  test_attest.py  test_audit.py  test_billing_policy.py  test_budget.py  test_callchain.py  test_completeness.py  test_composite_trust.py  test_discovery.py  test_engine.py  test_eval_harness.py  test_gate.py  test_gate_fuzz.py  test_identifiers.py  test_indicators.py  test_judge.py  test_judge_calibration.py  test_llm.py  test_macro.py  test_mainnet.py  test_marketplace.py  test_memo_cache.py  test_monitor_api.py  test_monitor_diff.py  test_monitor_engine.py  test_monitor_materiality.py  test_monitor_nl.py  test_monitor_store.py  test_monitor_triggers.py  test_monitor_update.py  (+13 more)
(+53 files in other folders)
